--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build": "vite build --base=./",  <-- ESTE ES EL CAMBIO CRÍTICO
+    "preview": "vite preview"
+  },
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
