--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "react-dom": "^19.2.0",
     "@google/genai": "^1.29.0",
     "react": "^19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vite": "^7.2.2",
+    "@vitejs/plugin-react": "^5.1.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
