feat: Implement Execution Zone page and modals
Introduces the "Execution Zone" page and associated routing. Also adds Age Gate and Cookie Consent modals, along with logic to manage their display based on user consent stored in localStorage. Includes styling for range inputs and a grid background pattern. Updates package name and metadata. Adds an email link to social icons.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tradevision-latam-landing-page",
+  "name": "tradevision-latam",
   "private": true,
   "version": "0.0.0",
   "type": "module",
