--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+        "lint": "eslint src --ext .ts,.tsx || true"
   },
   "dependencies": {
     "react-dom": "^19.2.0",
