chore: Remove CI/CD configuration and ESLint
Removes unused Travis CI configuration files and the ESLint configuration.
Also updates package.json to remove the lint script.
This streamlines the project by removing inactive or unnecessary build tooling.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-        "lint": "eslint src --ext .ts,.tsx || true"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react-dom": "^19.2.0",
